--- a/frontend/src/app/[lang]/globals.css
+++ b/frontend/src/app/[lang]/globals.css
@@ -1,7 +1,7 @@
+@import "tailwindcss";
 @import "react-slideshow-image/dist/styles.css";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
+@plugin '@tailwindcss/forms';
 
 body {
   @apply dark:bg-black
